--- a/01-intro/prediction_model.ipynb
+++ b/01-intro/prediction_model.ipynb
@@ -989,7 +989,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3612/1219225857.py:1: UserWarning: \n",
+      "/tmp/ipykernel_2544/1219225857.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -1002,7 +1002,7 @@
       "  sns.distplot(y_pred, label=\"prediction\")\n",
       "/home/codespace/anaconda3/lib/python3.11/site-packages/seaborn/_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
       "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "/tmp/ipykernel_3612/1219225857.py:2: UserWarning: \n",
+      "/tmp/ipykernel_2544/1219225857.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -1020,7 +1020,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a160b9b7a10>"
+       "<matplotlib.legend.Legend at 0x77e21dc2f590>"
       ]
      },
      "execution_count": 15,
