--- a/01-intro/homework1.ipynb
+++ b/01-intro/homework1.ipynb
@@ -512,7 +512,7 @@
     {
      "data": {
       "text/plain": [
-       "7.658406632748288"
+       "7.656752055233274"
       ]
      },
      "execution_count": 17,
@@ -540,6 +540,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "february_trips = february_trips[(february_trips[\"duration\"] >= 1) & (february_trips[\"duration\"] <= 60)]\n",
+    "\n",
     "february_trips['PULocationID'] = february_trips['PULocationID'].astype(str)\n",
     "february_trips['DOLocationID'] = february_trips['DOLocationID'].astype(str)\n",
     "\n",
@@ -557,7 +559,7 @@
     {
      "data": {
       "text/plain": [
-       "42.28816859376711"
+       "7.8186190261677275"
       ]
      },
      "execution_count": 19,
