--- a/02-model-experiement/homework/homework.ipynb
+++ b/02-model-experiement/homework/homework.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The answer is 2. Please for the code change check [here](https://github.com/aidenerdogan/mlops-zoomcamp/tree/main/02-model-experiement) and for the mflow UI check the SS below.\n",
+    "The answer is 2. Please for the code change check [here](https://github.com/aidenerdogan/mlops-zoomcamp/tree/homework2/02-model-experiement/homework) and for the mflow UI check the SS below.\n",
     "\n",
     "![mlflow_ui](\"homework_q2.png\")"
    ]
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The answer is 5.335. Please for the code change check [here](https://github.com/aidenerdogan/mlops-zoomcamp/tree/main/02-model-experiement) and for the mflow UI check the SS below.\n",
+    "The answer is 5.335. Please for the code change check [here](https://github.com/aidenerdogan/mlops-zoomcamp/blob/homework2/02-model-experiement/homework/hpo.py) and for the mflow UI check the SS below.\n",
     "\n",
     "![mlflow_hpo_models](\"homework_q5.png\")"
    ]
@@ -285,11 +285,16 @@
    "source": [
     "### Result\n",
     "\n",
-    "The answer is 5.567. Please for the code change check [here](https://github.com/aidenerdogan/mlops-zoomcamp/tree/main/02-model-experiement) and for the mflow UI check the SS below.\n",
+    "The answer is 5.567. Please for the code change check [here](https://github.com/aidenerdogan/mlops-zoomcamp/blob/homework2/02-model-experiement/homework/register_model.py) and for the mflow UI check the SS below.\n",
     "\n",
     "![mlflow_registered_model](\"homework_q6.png\")\n",
     "![cli_output](\"homework_q6-2.png\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
